@@ -1,3 +1,7 @@
+2009-07-24  Kasper Peeters  <kasper.peeters@aei.mpg.de>
+
+	* Started refactoring the output in Mathematica and Maple formats.
+
 2009-07-23  Kasper Peeters  <kasper.peeters@aei.mpg.de>
 
 	* Fixed handling of and recovering from LaTeX errors.
